src/cmd/awk/y.output

state 0
	$accept: .program $end 
	opt_pst: .    (28)

	$end  reduce 28 (src line 156)
	error  shift 3
	XBEGIN  reduce 28 (src line 156)
	XEND  reduce 28 (src line 156)
	NL  shift 6
	{  reduce 28 (src line 156)
	(  reduce 28 (src line 156)
	;  shift 7
	/  reduce 28 (src line 156)
	ARG  reduce 28 (src line 156)
	BLTIN  reduce 28 (src line 156)
	FUNC  reduce 28 (src line 156)
	SUB  reduce 28 (src line 156)
	GSUB  reduce 28 (src line 156)
	INDEX  reduce 28 (src line 156)
	MATCHFCN  reduce 28 (src line 156)
	SPRINTF  reduce 28 (src line 156)
	VAR  reduce 28 (src line 156)
	IVAR  reduce 28 (src line 156)
	VARNF  reduce 28 (src line 156)
	CALL  reduce 28 (src line 156)
	NUMBER  reduce 28 (src line 156)
	STRING  reduce 28 (src line 156)
	GETLINE  reduce 28 (src line 156)
	SPLIT  reduce 28 (src line 156)
	SUBSTR  reduce 28 (src line 156)
	+  reduce 28 (src line 156)
	-  reduce 28 (src line 156)
	NOT  reduce 28 (src line 156)
	DECR  reduce 28 (src line 156)
	INCR  reduce 28 (src line 156)
	INDIRECT  reduce 28 (src line 156)
	.  error

	pas  goto 2
	pst  goto 5
	opt_pst  goto 4
	program  goto 1

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  pas.    (1)

	.  reduce 1 (src line 99)


state 3
	program:  error.    (2)

	.  reduce 2 (src line 102)


state 4
	pas:  opt_pst.    (32)
	pas:  opt_pst.pa_stats opt_pst 

	XBEGIN  shift 12
	XEND  shift 13
	{  shift 16
	(  shift 18
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	FUNC  shift 14
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  reduce 32 (src line 167)

	pattern  goto 15
	term  goto 20
	re  goto 19
	pa_pat  goto 10
	pa_stat  goto 9
	pa_stats  goto 8
	reg_expr  goto 24
	var  goto 17
	varname  goto 21
	lbrace  goto 11
	subop  goto 39

state 5
	opt_pst:  pst.    (29)
	pst:  pst.NL 
	pst:  pst.; 

	NL  shift 47
	;  shift 48
	.  reduce 29 (src line 158)


state 6
	pst:  NL.    (87)

	.  reduce 87 (src line 274)


state 7
	pst:  ;.    (88)

	.  reduce 88 (src line 275)


state 8
	pas:  opt_pst pa_stats.opt_pst 
	pa_stats:  pa_stats.opt_pst pa_stat 
	opt_pst: .    (28)

	NL  shift 6
	;  shift 7
	.  reduce 28 (src line 156)

	pst  goto 5
	opt_pst  goto 49

state 9
	pa_stats:  pa_stat.    (44)

	.  reduce 44 (src line 190)


10: shift/reduce conflict (shift 16(0), red'n 35(0)) on {
state 10
	pa_stat:  pa_pat.    (35)
	pa_stat:  pa_pat.lbrace stmtlist } 
	pa_stat:  pa_pat., pa_pat 
	pa_stat:  pa_pat., pa_pat lbrace stmtlist } 

	,  shift 51
	{  shift 16
	.  reduce 35 (src line 176)

	lbrace  goto 50

state 11
	lbrace:  lbrace.NL 
	pa_stat:  lbrace.stmtlist } 

	error  shift 75
	NL  shift 52
	{  shift 16
	(  shift 18
	;  shift 68
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	BREAK  shift 55
	CLOSE  shift 56
	CONTINUE  shift 57
	DELETE  shift 73
	DO  shift 69
	EXIT  shift 59
	FOR  shift 70
	SUB  shift 45
	GSUB  shift 46
	IF  shift 71
	INDEX  shift 33
	MATCHFCN  shift 34
	NEXT  shift 63
	NEXTFILE  shift 64
	PRINT  shift 77
	PRINTF  shift 78
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	RETURN  shift 65
	SPLIT  shift 36
	SUBSTR  shift 40
	WHILE  shift 76
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	pattern  goto 74
	term  goto 20
	re  goto 19
	reg_expr  goto 24
	simple_stmt  goto 66
	stmt  goto 54
	stmtlist  goto 53
	var  goto 17
	varname  goto 21
	for  goto 60
	if  goto 61
	while  goto 67
	do  goto 58
	lbrace  goto 62
	subop  goto 39
	print  goto 72

state 12
	pa_stat:  XBEGIN.lbrace stmtlist } 

	{  shift 16
	.  error

	lbrace  goto 79

state 13
	pa_stat:  XEND.lbrace stmtlist } 

	{  shift 16
	.  error

	lbrace  goto 80

state 14
	pa_stat:  FUNC.funcname ( varlist rparen $$42 lbrace stmtlist } 

	VAR  shift 82
	CALL  shift 83
	.  error

	funcname  goto 81

15: shift/reduce conflict (shift 101(11), red'n 34(0)) on (
15: shift/reduce conflict (shift 42(8), red'n 34(0)) on ARG
15: shift/reduce conflict (shift 28(8), red'n 34(0)) on BLTIN
15: shift/reduce conflict (shift 45(10), red'n 34(0)) on SUB
15: shift/reduce conflict (shift 46(9), red'n 34(0)) on GSUB
15: shift/reduce conflict (shift 33(9), red'n 34(0)) on INDEX
15: shift/reduce conflict (shift 34(9), red'n 34(0)) on MATCHFCN
15: shift/reduce conflict (shift 37(10), red'n 34(0)) on SPRINTF
15: shift/reduce conflict (shift 41(11), red'n 34(0)) on VAR
15: shift/reduce conflict (shift 22(11), red'n 34(0)) on IVAR
15: shift/reduce conflict (shift 43(11), red'n 34(0)) on VARNF
15: shift/reduce conflict (shift 29(8), red'n 34(0)) on CALL
15: shift/reduce conflict (shift 35(9), red'n 34(0)) on NUMBER
15: shift/reduce conflict (shift 38(10), red'n 34(0)) on STRING
15: shift/reduce conflict (shift 32(6), red'n 34(0)) on GETLINE
15: shift/reduce conflict (shift 36(10), red'n 34(0)) on SPLIT
15: shift/reduce conflict (shift 40(10), red'n 34(0)) on SUBSTR
15: shift/reduce conflict (shift 27(13), red'n 34(0)) on +
15: shift/reduce conflict (shift 26(13), red'n 34(0)) on -
15: shift/reduce conflict (shift 99(15), red'n 34(0)) on NOT
15: shift/reduce conflict (shift 30(17), red'n 34(0)) on DECR
15: shift/reduce conflict (shift 31(17), red'n 34(0)) on INCR
15: shift/reduce conflict (shift 23(18), red'n 34(0)) on INDIRECT
state 15
	pa_pat:  pattern.    (34)
	pattern:  pattern.? pattern : pattern 
	pattern:  pattern.bor pattern 
	pattern:  pattern.and pattern 
	pattern:  pattern.EQ pattern 
	pattern:  pattern.GE pattern 
	pattern:  pattern.GT pattern 
	pattern:  pattern.LE pattern 
	pattern:  pattern.LT pattern 
	pattern:  pattern.NE pattern 
	pattern:  pattern.MATCHOP reg_expr 
	pattern:  pattern.MATCHOP pattern 
	pattern:  pattern.IN varname 
	pattern:  pattern.| GETLINE var 
	pattern:  pattern.| GETLINE 
	pattern:  pattern.term 

	(  shift 101
	|  shift 95
	MATCHOP  shift 93
	AND  shift 98
	BOR  shift 97
	EQ  shift 87
	GE  shift 88
	GT  shift 89
	LE  shift 90
	LT  shift 91
	NE  shift 92
	IN  shift 94
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	?  shift 84
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 99
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  reduce 34 (src line 172)

	term  goto 96
	var  goto 100
	varname  goto 21
	and  goto 86
	bor  goto 85
	subop  goto 39

state 16
	lbrace:  {.    (22)

	.  reduce 22 (src line 143)


17: shift/reduce conflict (shift 103(17), red'n 173(0)) on DECR
17: shift/reduce conflict (shift 104(17), red'n 173(0)) on INCR
state 17
	pattern:  var.ASGNOP pattern 
	term:  var.DECR 
	term:  var.INCR 
	term:  var.    (173)

	ASGNOP  shift 102
	DECR  shift 103
	INCR  shift 104
	.  reduce 173 (src line 418)


state 18
	pattern:  (.plist ) IN varname 
	term:  (.pattern ) 

	(  shift 18
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	pattern  goto 106
	plist  goto 105
	term  goto 20
	re  goto 19
	reg_expr  goto 24
	var  goto 17
	varname  goto 21
	subop  goto 39

state 19
	pattern:  re.    (76)

	.  reduce 76 (src line 250)


20: shift/reduce conflict (shift 107(14), red'n 77(0)) on /
20: shift/reduce conflict (shift 108(13), red'n 77(0)) on +
20: shift/reduce conflict (shift 109(13), red'n 77(0)) on -
state 20
	pattern:  term.    (77)
	term:  term./ ASGNOP term 
	term:  term.+ term 
	term:  term.- term 
	term:  term.* term 
	term:  term./ term 
	term:  term.% term 
	term:  term.POWER term 

	/  shift 107
	+  shift 108
	-  shift 109
	*  shift 110
	%  shift 111
	POWER  shift 112
	.  reduce 77 (src line 251)


state 21
	var:  varname.    (174)
	var:  varname.[ patlist ] 

	[  shift 113
	.  reduce 174 (src line 421)


state 22
	var:  IVAR.    (176)

	.  reduce 176 (src line 424)


state 23
	var:  INDIRECT.term 

	(  shift 101
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 99
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	term  goto 114
	var  goto 100
	varname  goto 21
	subop  goto 39

state 24
	re:  reg_expr.    (93)

	.  reduce 93 (src line 282)


state 25
	re:  NOT.re 
	term:  NOT.term 

	(  shift 101
	/  shift 44
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 25
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	term  goto 116
	re  goto 115
	reg_expr  goto 24
	var  goto 100
	varname  goto 21
	subop  goto 39

state 26
	term:  -.term 

	(  shift 101
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 99
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	term  goto 117
	var  goto 100
	varname  goto 21
	subop  goto 39

state 27
	term:  +.term 

	(  shift 101
	ARG  shift 42
	BLTIN  shift 28
	SUB  shift 45
	GSUB  shift 46
	INDEX  shift 33
	MATCHFCN  shift 34
	SPRINTF  shift 37
	VAR  shift 41
	IVAR  shift 22
	VARNF  shift 43
	CALL  shift 29
	NUMBER  shift 35
	STRING  shift 38
	GETLINE  shift 32
	SPLIT  shift 36
	SUBSTR  shift 40
	+  shift 27
	-  shift 26
	NOT  shift 99
	DECR  shift 30
	INCR  shift 31
	INDIRECT  shift 23
	.  error

	term  goto 118
	var  goto 100
	varname  goto 21
	subop  goto 39

state 28
	term:  BLTIN.( ) 
	term:  BLTIN.( patlist ) 
	term:  BLTIN.    (145)

	(  shift 119
	.  reduce 145 (src line 367)

